# ActiGen

./: ActiGen.cabal  README.md
src/: Activity.hs  Main.hs
