name:                ActiGen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lboklin/ActiGen#readme
license:             BSD3
license-file:        LICENSE
author:              Ludvig Böklin
maintainer:          ludvig.boklin@protonmail.com
copyright:           (c) 2017 Ludvig Böklin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ActiGen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
