name:                ActiGen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Anavra/ActiGen#readme
license:             LGPL-3
license-file:        LICENSE
author:              Vanessa Rojas
maintainer:          vanessa.rojas@protonmail.com
copyright:           (c) 2017 Vanessa Rojas
category:            tool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ActiGen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
